stylesMain.css
/* 
GEOM99 project - final website styles page
Created by Stephen VanDam, Kamryn Sandiford, Ewen Harris
This file is intended for use as the final submission for GEOM99 final project
*/

/* SEK > #1B8F3D, #00A2E8, #880015 */
* {
    FONT-FAMILY: 'Tahoma', 'Sans-seriff';
    margin: 0;
    box-sizing: border-box;
        /*as per w3schools, changes calculation of total size of elements to give better CSS control */
}
html,body {
    height: 100%
}
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
header {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    font-size: 2.5em;
}
nav {
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
    flex-grow: .5;
}
nav a {
    display: flex;
    color: #880015; 
    text-align: center;
    padding: 10px;
    transition: all .5s ease;
    text-decoration: none;
} 
nav a:hover {
    background-color: #1B8F3D
}
main {
    display: flex;
    flex-direction: column;
    margin-left: 1vw;
    margin-right: 1vw;
}
figure {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
figcaption {
    font-style: italic;
    text-align: center
}
footer {
    display: flex;
    justify-content: center;
    margin-top: auto;
    position: static;
    bottom: 0;
    background-color:#1B8F3D;
    color: white;
}

h1 {
    font-size: 2em;
    color: #880015;
    margin-top: 2vh;
    margin-bottom: 2vh;
}
h2 {
    font-size: 1.5em;
    color: #00A2E8;
    margin: 2vh;
}

#logo {
    max-height: 5vw;
}
#map {height: 600px; }
#S {
    color:#1B8F3D;
}
#E {
    color:#00A2E8;
}
#K {
    color:#880015;
}

